--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         }
         stage('Test') {
             steps {
+                echo "-----------------"
                 sh 'mvn test'
             }
             post {
